# SAGE

./: .gitignore  .gitmodules  README.md  TODO
depth_perception_ws/: launch.txt
detection_ws/src/cloud_cluster/graph_node_msgs/: CMakeLists.txt
detection_ws/src/cloud_cluster/graph_node_msgs/msg/: GraphNode.msg  GraphNodeArray.msg
detection_ws/src/cloud_cluster/graph_node_msgs/src/: graph_node_collection.cpp
detection_ws/src/image_tools/: CMakeLists.txt  package.xml
detection_ws/src/image_tools/config/: image_tools.yaml
detection_ws/src/image_tools/include/image_tools/: image_tools.hpp
detection_ws/src/image_tools/launch/: throttle.launch.py
detection_ws/src/image_tools/rviz/: rviz.rviz
detection_ws/src/image_tools/src/: image_tools_node.cpp
detection_ws/src/image_tools/src/image_tools/: image_tools.cpp
detection_ws/src/value_map/: CMakeLists.txt  package.xml  setup.cfg  setup.py
detection_ws/src/value_map/config/: value_map.yaml
detection_ws/src/value_map/docs/: Pseudocode.md
detection_ws/src/value_map/include/value_map/: color.hpp  robot.hpp  semantic_score.hpp  semantic_value_map.hpp  service_handler.hpp  value_map.hpp
detection_ws/src/value_map/launch/: value_map.launch.py
detection_ws/src/value_map/rviz/: rviz.rviz
detection_ws/src/value_map/src/: value_map_node.cpp
detection_ws/src/value_map/src/test/: test_image_subscriber.cpp  test_service.cpp
detection_ws/src/value_map/src/value_map/: robot.cpp  semantic_value_map.cpp  service_handler.cpp  value_map.cpp
detection_ws/src/value_map/value_map/: semantic_value_map.py  service_handler.py  utils.py  value_map.py  value_map_node.py
detection_ws/src/value_map/value_map/test/: add_two_ints_client.py  add_two_ints_server.py  test_pcl.py  test_service.py
exploitation_ws/src/sage_bt_msgs/: CMakeLists.txt  package.xml
exploitation_ws/src/sage_bt_msgs/action/: ExecutePrompt.action
exploitation_ws/src/sage_bt_msgs/srv/: StartupCheck.srv
explorer_ws/src/carter_description/: CMakeLists.txt  package.xml
explorer_ws/src/carter_description/launch/: display.launch.py
explorer_ws/src/carter_description/rviz/: carter.rviz
explorer_ws/src/carter_description/urdf/: carter.urdf
explorer_ws/src/nav_bringup/: CMakeLists.txt  package.xml
explorer_ws/src/nav_bringup/config/: carter_nav2_params.yaml  mapper_params_online_async.yaml  nav2_params.yaml  pcl_to_scan.yaml
explorer_ws/src/nav_bringup/config/test/: mapper_params_online_async.yaml  nav2_params.yaml
explorer_ws/src/nav_bringup/launch/: nav_bringup.launch.py  pcl_to_scan.launch.py  tb4_nav_bringup.launch.py
explorer_ws/src/nav_bringup/rviz/: rviz.rviz
explorer_ws/src/relevance_map/: CMakeLists.txt  package.xml
explorer_ws/src/relevance_map/config/: relevance_map.yaml
explorer_ws/src/relevance_map/include/relevance_map/: relevance_map.hpp  robot.hpp
explorer_ws/src/relevance_map/launch/: relevance_map.launch.py
explorer_ws/src/relevance_map/scripts/: plot_relevance_map.py
explorer_ws/src/relevance_map/src/: relevance_map_node.cpp
explorer_ws/src/relevance_map/src/relevance_map/: relevance_map.cpp  robot.cpp
explorer_ws/src/rosbag_manager/: CMakeLists.txt  package.xml
explorer_ws/src/rosbag_manager/launch/: README.md  play_rosbag.launch.py  record_bag.launch.py  rviz.launch.py
explorer_ws/src/rosbag_manager/rviz/: bag.rviz
explorer_ws/src/rosbag_manager/src/: recorder_node.cpp
explorer_ws/src/sage_behaviour_tree/: CMakeLists.txt  README.md  package.xml
explorer_ws/src/sage_behaviour_tree/bt_xml/: Project.btproj  demo.xml  multiple_search.xml  multiple_search_evaluator.xml  single_search.xml  test.xml  test_single_search.xml  trees_nodes_model.xml
explorer_ws/src/sage_behaviour_tree/bt_xml/test/: test.xml  test_detection.xml  test_detection_navigation.xml  test_goto_graph_node.xml  test_seekout_graph_nodes.xml  test_single_search.xml
explorer_ws/src/sage_behaviour_tree/bt_xml/tree_nodes_model/: trees_nodes_model.xml
explorer_ws/src/sage_behaviour_tree/config/: sage_bt_config.yaml
explorer_ws/src/sage_behaviour_tree/include/sage_behaviour_tree/: colors.hpp  core.hpp  decorator.hpp  detection.hpp  navigation.hpp  nodes.hpp  robot.hpp  utils.hpp
explorer_ws/src/sage_behaviour_tree/launch/: bt_demo.launch.py  sage_behavior_tree.launch.py
explorer_ws/src/sage_behaviour_tree/src/: bt_demo_node.cpp  core.cpp  decorator.cpp  detection.cpp  navigation.cpp  nodes.cpp  robot.cpp  sage_bt_node copy.cpp  sage_bt_node.cpp  semantic_prompt.cpp  utils.cpp
explorer_ws/src/semantic_frontier_exploration/: CMakeLists.txt  package.xml
explorer_ws/src/semantic_frontier_exploration/config/: sem_frontiers.yml  semantic_costmap.yaml
explorer_ws/src/semantic_frontier_exploration/frontier_msgs/msg/: Frontier.msg
explorer_ws/src/semantic_frontier_exploration/include/semantic_frontier_exploration/: costmap.hpp  frontier.hpp  frontier_collection.hpp  semantic_frontier_exploration.hpp
explorer_ws/src/semantic_frontier_exploration/launch/: semantic_frontier_exploration.launch.py
explorer_ws/src/semantic_frontier_exploration/rviz/: rviz.rviz
explorer_ws/src/semantic_frontier_exploration/semantic_frontier_exploration/: CMakeLists.txt  package.xml
explorer_ws/src/semantic_frontier_exploration/src/: costmap.cpp  costmap_node.cpp
explorer_ws/src/value_map/: CMakeLists.txt  package.xml
explorer_ws/src/value_map/config/: value_map.yaml
explorer_ws/src/value_map/launch/: value_map.launch.py
explorer_ws/src/value_map/rviz/: rviz.rviz
explorer_ws/src/value_map/src/: value_map_node.cpp
sage_evaluator/evaluator_costmap/: CMakeLists.txt  package.xml
sage_evaluator/evaluator_msgs/: CMakeLists.txt  package.xml
sage_evaluator/evaluator_msgs/msg/: EvaluationEpisode.msg  EvaluationEvent.msg  EvaluationPathEvent.msg  EvaluationResult.msg  EvaluationSummary.msg
sage_evaluator/evaluator_msgs/srv/: GetShortestPath.srv
sage_evaluator/evaluator_planner/: CMakeLists.txt  package.xml
sage_evaluator/evaluator_planner/launch/: evaluator_planner.launch.py
sage_evaluator/evaluator_planner/src/: evaluator_planner_node.cpp
(+489 files in other folders)
