<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>value_map</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kevin-eppacher@hotmail.de">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>lifecycle_msgs</build_depend>
  <exec_depend>lifecycle_msgs</exec_depend>

  <build_depend>seem_ros_interfaces</build_depend>
  <exec_depend>seem_ros_interfaces</exec_depend>

  <build_depend>vlm_interface</build_depend>
  <exec_depend>vlm_interface</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>

  <build_depend>multimodal_query_msgs</build_depend>
  <exec_depend>multimodal_query_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
