<?xml version="1.0"?>
<package format="3">
  <name>sage_bt_msgs</name>
  <version>0.0.1</version>
  <description>Messages, services and actions for the Sage BT Orchestrator.</description>

  <maintainer email="dev@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav2_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
