<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbag_manager</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kevin-eppacher@hotmail.de">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <build_depend>rosbag2_cpp</build_depend>
  <exec_depend>rosbag2_cpp</exec_depend>

  <build_depend>rosbag2_storage</build_depend>
  <exec_depend>rosbag2_storage</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>tf2_msgs</build_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
