<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_frontier_exploration</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kevin-eppacher@hotmail.de">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Include custom dependencies -->
  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>

  <build_depend>opencv4</build_depend>
  <exec_depend>opencv4</exec_depend>

  <build_depend>frontier_msgs</build_depend>
  <exec_depend>frontier_msgs</exec_depend>

  <build_depend>graph_node_msgs</build_depend>
  <exec_depend>graph_node_msgs</exec_depend>

  <build_depend>nav2_costmap</build_depend>
  <exec_depend>nav2_costmap</exec_depend>


  <build_depend>pcl_conversions</build_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <build_depend>pcl_msgs</build_depend>
  <exec_depend>pcl_msgs</exec_depend>

  <build_depend>pcl_ros</build_depend>
  <exec_depend>pcl_ros</exec_depend>

  <!-- End include custom dependencies -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
